--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -158,6 +158,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\ETRSTW4I\\Anderson-Teixeira et al. - 2021 - Carbon cycling in mature and regrowth forests glob.pdf}
 }
 
+@article{anderson-teixeiraJointEffectsClimateinpress,
+  title = {Joint Effects of Climate, Tree Size, and Year on Annual Tree Growth Derived from Tree-Ring Records of Ten Globally Distributed Forests},
+  author = {Anderson-Teixeira, K.J. and Herrmann, Valentine and Rollinson, Christine R. and Gonzalez-Akre, Erika B. and Gonzalez, Bianca and Pederson, Neil and [many more]},
+  year = {in press},
+  journaltitle = {Global Change Biology}
+}
+
 @article{anderson-teixeiraSizerelatedScalingTree2015,
   title = {Size-Related Scaling of Tree Form and Function in a Mixed-Age Forest},
   author = {Anderson-Teixeira, Kristina J. and McGarvey, Jennifer C. and Muller-Landau, Helene C. and Park, Janice Y. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Bennett, Amy C. and So, Christopher V. and Bourg, Norman A. and Thompson, Jonathan R. and McMahon, Sean M. and McShea, William J.},
@@ -3862,6 +3869,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\7VCMKIJR\\Hulley et al. - 2019 - New ECOSTRESS and MODIS Land Surface Temperature D.pdf;C\:\\Users\\Me\\Zotero\\storage\\PDCAT8IX\\2136.html}
 }
 
+@article{humphreySoilMoistureAtmosphere2021,
+  title = {Soil Moisture– Atmosphere Feedback Dominates Land Carbon Uptake Variability},
+  author = {Humphrey, Vincent and Berg, Alexis and Ciais, Philippe and Gentine, Pierre and Jung, Martin and Reichstein, Markus and Seneviratne, Sonia I. and Frankenberg, Christian},
+  date = {2021-04},
+  journaltitle = {Nature},
+  volume = {592},
+  number = {7852},
+  pages = {65--69},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/s41586-021-03325-5},
+  url = {https://www.nature.com/articles/s41586-021-03325-5},
+  urldate = {2021-04-06},
+  abstract = {Year-to-year changes in carbon uptake by terrestrial ecosystems have an essential role in determining atmospheric carbon dioxide concentrations1. It remains uncertain to what extent temperature and water availability can explain these variations at the global scale2–5. Here we use factorial climate model simulations6 and show that variability in soil moisture drives 90 per cent of the inter-annual variability in global land carbon uptake, mainly through its impact on photosynthesis. We find that most of this ecosystem response occurs indirectly as soil moisture–atmosphere feedback amplifies temperature and humidity anomalies and enhances the direct effects of soil water stress. The strength of this feedback mechanism explains why coupled climate models indicate that soil moisture has a dominant role4, which is not readily apparent from land surface model simulations and observational analyses2,5. These findings highlight the need to account for feedback between soil and atmospheric dryness when estimating the response of the carbon cycle to climatic change globally5,7, as well as when conducting field-scale investigations of the response of the ecosystem to droughts8,9. Our results show that most of the global variability in modelled land carbon uptake is driven by temperature and vapour pressure deficit effects that are controlled by soil moisture.},
+  issue = {7852},
+  langid = {english}
+}
+
 @article{hurttTerrestrialModelsGlobal1998,
   title = {Terrestrial Models and Global Change: Challenges for the Future},
   shorttitle = {Terrestrial Models and Global Change},
@@ -4144,12 +4169,6 @@
   url = {https://academic-oup-com.smithsonian.idm.oclc.org/aob/article/101/1/5/91716},
   urldate = {2021-07-29},
   file = {C\:\\Users\\Me\\Zotero\\storage\\4CAFHSYJ\\91716.html}
-}
-
-@online{IsopreneNewInsights,
-  title = {Isoprene: New Insights into the Control of Emission and Mediation of Stress Tolerance by Gene Expression - {{Lantz}} - 2019 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
-  url = {https://onlinelibrary.wiley.com/doi/10.1111/pce.13629},
-  urldate = {2021-10-01}
 }
 
 @book{jarvisSingleStomaSingle,
@@ -4977,6 +4996,26 @@
   copyright = {© 2020 . https://www.pnas.org/site/aboutpnas/licenses.xhtmlPublished under the PNAS license.},
   langid = {english},
   keywords = {cold and heat,hardening,latitude,macrophysiology,temperature}
+}
+
+@article{lantzIsopreneNewInsights2019,
+  title = {Isoprene: New Insights into the Control of Emission and Mediation of Stress Tolerance by Gene Expression},
+  shorttitle = {Isoprene},
+  author = {Lantz, Alexandra T. and Allman, Joshua and Weraduwage, Sarathi M. and Sharkey, Thomas D.},
+  date = {2019},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {42},
+  number = {10},
+  pages = {2808--2826},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13629},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13629},
+  urldate = {2021-10-01},
+  abstract = {Isoprene is a volatile compound produced in large amounts by some, but not all, plants by the enzyme isoprene synthase. Plants emit vast quantities of isoprene, with a net global output of 600 Tg per year, and typical emission rates from individual plants around 2\% of net carbon assimilation. There is significant debate about whether global climate change resulting from increasing CO2 in the atmosphere will increase or decrease global isoprene emission in the future. We show evidence supporting predictions of increased isoprene emission in the future, but the effects could vary depending on the environment under consideration. For many years, isoprene was believed to have immediate, physical effects on plants such as changing membrane properties or quenching reactive oxygen species. Although observations sometimes supported these hypotheses, the effects were not always observed, and the reasons for the variability were not apparent. Although there may be some physical effects, recent studies show that isoprene has significant effects on gene expression, the proteome, and the metabolome of both emitting and nonemitting species. Consistent results are seen across species and specific treatment protocols. This review summarizes recent findings on the role and control of isoprene emission from plants.},
+  langid = {english},
+  keywords = {climate change,CO2,growth,high temperature,signalling,stress tolerance,triose phosphate utilization limitation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13629},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F3PKGYHK\\Lantz et al. - 2019 - Isoprene New insights into the control of emissio.pdf}
 }
 
 @article{laothawornkitkulBiogenicVolatileOrganic2009,
@@ -8677,6 +8716,23 @@
   langid = {english},
   keywords = {<i>Dalbergia</i>,<i>Shorea</i>,<i>Xylia</i>,Dipterocarpaceae,Thailand forests,woody legumes},
   file = {C\:\\Users\\Me\\Zotero\\storage\\23QRUC67\\Rundel et al. - 2017 - Seasonal Water Relations and Leaf Temperature in a.pdf;C\:\\Users\\Me\\Zotero\\storage\\5YT9NSKY\\368.html}
+}
+
+@article{russellResidenceTimesDecay2014,
+  title = {Residence {{Times}} and {{Decay Rates}} of {{Downed Woody Debris Biomass}}/{{Carbon}} in {{Eastern US Forests}}},
+  author = {Russell, Matthew B. and Woodall, Christopher W. and Fraver, Shawn and D’Amato, Anthony W. and Domke, Grant M. and Skog, Kenneth E.},
+  date = {2014-08-01},
+  journaltitle = {Ecosystems},
+  volume = {17},
+  number = {5},
+  pages = {765--777},
+  issn = {1435-0629},
+  doi = {10.1007/s10021-014-9757-5},
+  url = {https://doi.org/10.1007/s10021-014-9757-5},
+  urldate = {2018-09-06},
+  abstract = {A key component in describing forest carbon (C) dynamics is the change in downed dead wood biomass through time. Specifically, there is a dearth of information regarding the residence time of downed woody debris (DWD), which may be reflected in the diversity of wood (for example, species, size, and stage of decay) and site attributes (for example, climate) across the study region of eastern US forests. The empirical assessment of DWD rate of decay and residence time is complicated by the decay process itself, as decomposing logs undergo not only a reduction in wood density over time but also reductions in biomass, shape, and size. Using DWD repeated measurements coupled with models to estimate durations in various stages of decay, estimates of DWD half-life (T HALF), residence time (T RES), and decay rate (k constants) were developed for 36 tree species common to eastern US forests. Results indicate that estimates for T HALF averaged 18 and 10 years for conifers and hardwoods, respectively. Species that exhibited shorter T HALF tended to display a shorter T RES and larger k constants. Averages of T RES ranged from 57 to 124 years for conifers and from 46 to 71 years for hardwoods, depending on the species and methodology for estimating DWD decomposition considered. Decay rate constants (k) increased with increasing temperature of climate zones and ranged from 0.024 to 0.040 for conifers and from 0.043 to 0.064 for hardwoods. These estimates could be incorporated into dynamic global vegetation models to elucidate the role of DWD in forest C dynamics.},
+  langid = {english},
+  keywords = {carbon flux,coarse woody debris,decay class,decomposition,forest fuels,forest inventory}
 }
 
 @incollection{russoEcophysiologyLeafLifespan2016,
