--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -401,8 +401,6 @@ Emission of the VOCs isoprene and a diversity of monoterpenes are similarly ligh
 Within species, isoprene emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsPhotosynthesisResourceDistribution2007], and across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a]. However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021]. Similarly, within tree crowns of European beech, monoterpene emissions were found to be highest in semi-shaded leaves beneath the canopy surface [@simpragaVerticalCanopyGradient2013]. This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. Temperature sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of VOCs  in forest thermal sensitivity across the vertical gradient. Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play the same role in sun-exposed canopy leaves.
 
 
-*add something on monoterpenes?*
-
 ## 5. Tree and ecosystem ecology
 
 Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`). 
@@ -413,9 +411,9 @@ Tree metabolism and growth are shaped by the positioning of their crowns within 
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which in turn is a strong predictor of tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] and photosynthesis.
 Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 The net foliar photosynthate production is allocated among functions including respiration, above-ground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
-Among these, the process about which we know the most is woody aboveground growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling in that it builds up woody tissues with a long residence time in the ecosystem [@russell_residence_2014].
-While woody growth rates, measured as radial stem growth, may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2021], patterns are consistent when comparing growth rates across individuals within a closed-canopy forest: growth rate consistently increases with tree size [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015]. 
-In contrast, in more open forests and for open-growth individual trees, growth rate declines with DHB [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraJointEffectsClimate2021], pointing to a dominant role of vertical profiles in microclimate in shaping tree growth rates within forests. 
+Among these, the process about which we know the most is woody aboveground growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling in that it builds up woody tissues with a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
+While woody growth rates, measured as radial stem growth, may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimateinpress], patterns are consistent when comparing growth rates across individuals within a closed-canopy forest: growth rate consistently increases with tree size [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015]. 
+In contrast, in more open forests and for open-growth individual trees, growth rate declines with DHB [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraJointEffectsClimateinpress], pointing to a dominant role of vertical profiles in microclimate in shaping tree growth rates within forests. 
 
 Vertical gradients also affect the climate sensitivity of metabolism and growth.
 Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
@@ -434,7 +432,7 @@ Indeed, despite the potential for shorter trees in open forests to experience gr
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
 While it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
-Because VPD increases rapidly with $T_{air}$, high $T_{air}$ is often associated with atmospheric drought, likely explaining negative growth responses -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for Fig. `r fig_treerings`,@anderson-teixeiraJointEffectsClimate2021].
+Because VPD increases rapidly with $T_{air}$, high $T_{air}$ is often associated with atmospheric drought, likely explaining negative growth responses -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimateinpress].
 However, under conditions that are humid enough that canopy trees can maintain high $g_s$, we do not necessarily expect their photosynthesis (see section 4.2) or woody growth to exhibit higher sensitivity to $T_{air}$ than their understory counterparts. 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
@@ -475,11 +473,11 @@ As climate change progresses, we anticipate increases in both mean daytime and n
 These changes will impact leaf and ecosystem gas exchange with the atmosphere, and, over longer time frames, forest structure, composition, and leaf trait distributions. 
 Our in-depth review sheds some light as to how responses are likely to vary across forest vertical gradients, yet important uncertainties remain.
 
-To the extent that warming is coupled to drought, we expect that the largest trees will usually be hardest-hit, particularly in cases where the drought is severe, and that this will occur at least in part because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimate2021].
+To the extent that warming is coupled to drought, we expect that the largest trees will usually be hardest-hit, particularly in cases where the drought is severe, and that this will occur at least in part because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimateinpress].
 Specifically, warming will disproportionately stress tall canopy trees when $T_{air}$ and accompanying VPD rise enough that sun-exposed leaves cannot maintain both hydraulic safety and the transpirational cooling required to keep $T_{leaf}$ below damaging thresholds.
 In contrast, understory trees will be more sheltered during droughts and heat waves, and in some settings may benefit from increased light availability [@bennettLargerTreesSuffer2015].
 An interesting open question is to what extent these patterns vary with the nature of the drought, including the relative contributions to stress from low soil moisture versus high VPD. 
-While the two are coupled over longer time scales [@humphrey_soil_2021; @novickIncreasingImportanceAtmospheric2016], the latter can be intense for short periods even when soil moisture is high (e.g., during a heat wave) and exerts a stronger influence on ET in many biomes [@novickIncreasingImportanceAtmospheric2016]. 
+While the two are coupled over longer time scales [@humphreySoilMoistureAtmosphere2021; @novickIncreasingImportanceAtmospheric2016], the latter can be intense for short periods even when soil moisture is high (e.g., during a heat wave) and exerts a stronger influence on ET in many biomes [@novickIncreasingImportanceAtmospheric2016]. 
 Given the mechanisms reviewed here, we might expect that atmospheric dryness in particular skews the stress more towards the exposed canopy trees.   
 
 What remains poorly understood is how responses to warming will vary across vertical gradients under mesic conditions. 
@@ -498,13 +496,13 @@ Thus, while canopy trees are probably more vulnerable to mortality from distinct
 
 Thus, in synthesis, warming temperatures will affect trees across the vertical gradient, but the stress will be of a different nature at different heights.
 We expect that the tallest trees will be increasingly prone to hydraulic failure and damaging or lethal $T_{leaf}$'s, whereas understory trees may be increasingly prone to carbon starvation, particularly under humid conditions that make it more challenging to shed excess heat.
-Both groups -- but probably disproportionately the canopy trees -- are likely to experience increasing mortality, with the modes of mortality mirroring the current tendency for canopy trees to be more prone to climate-related disturbances including drought while understory trees are more prone to competition and carbon starvation [@gora_implications_2021].
+Both groups -- but probably disproportionately the canopy trees -- are likely to experience increasing mortality, with the modes of mortality mirroring the current tendency for canopy trees to be more prone to climate-related disturbances including drought while understory trees are more prone to competition and carbon starvation [@goraImplicationsSizedependentTree2021].
 When the canopy trees die, this will open canopy gaps, as discussed in the following section.
 
 ### Canopy disturbance
 
 As discussed above, rising temperatures and severe droughts place the canopy trees at particularly elevated risk of mortality. 
-Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting;  @gora_implications_2021] that are expected to intensify with climate change (@ipccClimateChangeWidespread2021), and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
+Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting;  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChangeWidespread2021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the canopy [@starkReframingTropicalSavannization2020]. 
 While wetter forests can prove quite resilient to such changes [@millerReducedImpactLogging2011], this shift to hotter and drier microclimates can often make forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
