more updates for refs

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6499,6 +6499,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IKILNMUC\\Millen and Clendon - 1979 - Leaf Angle An Adaptive Feature of Sun and Shade L.pdf}
 }
 
+@article{millerAlternativeStableEquilibria2019,
+  title = {Alternative Stable Equilibria and Critical Thresholds Created by Fire Regimes and Plant Responses in a Fire-Prone Community},
+  author = {Miller, Adam D. and Thompson, Jonathan R. and Tepley, Alan J. and Anderson‐Teixeira, Kristina J.},
+  date = {2019},
+  journaltitle = {Ecography},
+  volume = {42},
+  number = {1},
+  pages = {55--66},
+  issn = {1600-0587},
+  doi = {10.1111/ecog.03491},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.03491},
+  urldate = {2019-02-21},
+  abstract = {Wildfire is a dominant disturbance in many ecosystems, and fire frequency and intensity are being altered as climates change. Through effects on mortality and regeneration, fire affects plant community composition, species richness, and carbon cycling. In some regions, changes to fire regimes could result in critical, non-reversible transitions from forest to non-forested states. For example, the Klamath ecoregion (northwest United States) supports extensive conifer forests that are initially replaced by hardwood chaparral following high-severity fire, but eventually return to conifer forest during the fire-free periods. Climate change alters both the fire regime and post-fire recovery dynamics, potentially causing shrubland to persist as a stable (i.e. self-renewing) vegetation stage, rather than an ephemeral stage. Here, we present a theoretical investigation of how changes in plant traits and fire regimes can alter the stability of communities in forest-shrub systems such as the Klamath. Our model captures the key characteristics of the system, including life-stage-specific responses to disturbance and asymmetrical competitive interactions. We assess vegetation stability via invasion analysis, and conclude that portions of the landscape that are currently forested also can be stable as shrubland. We identify parameter thresholds where community equilibria change from stable to unstable, and show how these thresholds may shift in response to changes in life-history or environmental parameters. For instance, conifer maturation rates are expected to decrease as aridity increases under climate change, and our model shows that this reduction decreases the fire frequencies at which forests become unstable. Increases in fire activity sufficient to destabilize forest communities are likely to occur in more arid future climates. If widespread, this would result in reduced carbon stocks and a positive feedback to climate change. Changes in stability may be altered by management practices.},
+  langid = {english},
+  keywords = {alternative stable equilibria,disturbance theory,theoretical modeling}
+}
+
 @article{millerOnlySunlitLeaves2021,
   title = {Only Sun-Lit Leaves of the Uppermost Canopy Exceed Both Air Temperature and Photosynthetic Thermal Optima in a Wet Tropical Forest},
   author = {Miller, Benjamin D. and Carter, Kelsey R. and Reed, Sasha C. and Wood, Tana E. and Cavaleri, Molly A.},
@@ -10411,6 +10428,23 @@
   title = {The Temperature Response of {{C3}} and {{C4}} Photosynthesis - {{SAGE}} - 2007 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
   url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/10.1111/j.1365-3040.2007.01682.x},
   urldate = {2021-07-21}
+}
+
+@article{tepleyVulnerabilityForestLoss2017,
+  title = {Vulnerability to Forest Loss through Altered Postfire Recovery Dynamics in a Warming Climate in the {{Klamath Mountains}}},
+  author = {Tepley, Alan J. and Thompson, Jonathan R. and Epstein, Howard E. and Anderson‐Teixeira, Kristina J.},
+  date = {2017},
+  journaltitle = {Global Change Biology},
+  volume = {23},
+  number = {10},
+  pages = {4117--4132},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.13704},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13704},
+  urldate = {2019-02-21},
+  abstract = {In the context of ongoing climatic warming, certain landscapes could be near a tipping point where relatively small changes to their fire regimes or their postfire forest recovery dynamics could bring about extensive forest loss, with associated effects on biodiversity and carbon-cycle feedbacks to climate change. Such concerns are particularly valid in the Klamath Region of northern California and southwestern Oregon, where severe fire initially converts montane conifer forests to systems dominated by broadleaf trees and shrubs. Conifers eventually overtop the competing vegetation, but until they do, these systems could be perpetuated by a cycle of reburning. To assess the vulnerability of conifer forests to increased fire activity and altered forest recovery dynamics in a warmer, drier climate, we characterized vegetation dynamics following severe fire in nine fire years over the last three decades across the climatic aridity gradient of montane conifer forests. Postfire conifer recruitment was limited to a narrow window, with 89\% of recruitment in the first 4 years, and height growth tended to decrease as the lag between the fire year and the recruitment year increased. Growth reductions at longer lags were more pronounced at drier sites, where conifers comprised a smaller portion of live woody biomass. An interaction between seed-source availability and climatic aridity drove substantial variation in the density of regenerating conifers. With increasing climatic water deficit, higher propagule pressure (i.e., smaller patch sizes for high-severity fire) was needed to support a given conifer seedling density, which implies that projected future increases in aridity could limit postfire regeneration across a growing portion of the landscape. Under a more severe prospective warming scenario, by the end of the century more than half of the area currently capable of supporting montane conifer forest could become subject to minimal conifer regeneration in even moderate-sized (10s of ha) high-severity patches.},
+  langid = {english},
+  keywords = {Douglas-fir,forest resilience,Klamath Mountains,postfire recruitment,propagule pressure,reburn,stem analysis,tipping point,tree regeneration}
 }
 
 @article{terashimaIrradiancePhenotypeComparative2006,
