--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -507,7 +507,7 @@ Forest fragmentation also disproportionately kills large trees by making them mo
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the canopy [@starkReframingTropicalSavannization2020]. 
 While wetter forests can prove quite resilient to such changes [@millerReducedImpactLogging2011], this shift to hotter and drier microclimates can often make forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
 Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
-Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but has dramatically reduced probability of recovering and persisting when affected by severe canopy disturbance [**REFS**, @tepley_vulnerability_2017; @miller_alternative_2019; @starkReframingTropicalSavannization2020; @mcdowellPervasiveShiftsForest2020].
+Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but has dramatically reduced probability of recovering and persisting when affected by severe canopy disturbance [**REFS**, @tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @starkReframingTropicalSavannization2020; @mcdowellPervasiveShiftsForest2020].
 
 Canopy disturbance poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]
@@ -538,7 +538,7 @@ Less attention has focused on developing and validating understory tree dynamics
 This is likely due in large part to the fact that observational and experimental studies required to resolve key patterns and underlying mechanisms remain somewhat sparse (see sections 4, 5).
 Pairing of models and observational studies will be important for further improving our mechanistic understanding of vertical gradients and their implications.
 
-Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019a] and functions (e.g., thermal responses, as we present in this paper). 
+Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, as we present in this paper). 
 At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @depurySimpleScalingPhotosynthesis1997; @bonanMovingIncorrectUseful2021].
 In addition, capturing the vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs. `r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig. `r `fig_leaf_T`) to vertically varying abiotic conditions (Fig. `fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
 
